# Inzynierka

./: Inzynierka_analiza_modeli.ipynb  Inzynierka_pipeline.ipynb  README.md  functions.py  main.py  pip2_model.pkl  pip3_model.pkl  predict.py  requirements.py  requirements.txt
new-kedro-project/: README.md  pyproject.toml  stats.json
new-kedro-project/conf/base/: catalog.yml  parameters_data_science.yml
new-kedro-project/src/new_kedro_project/: settings.py
new-kedro-project/src/new_kedro_project/pipelines/data_processing/: nodes.py  pipeline.py
new-kedro-project/src/new_kedro_project/pipelines/data_science/: pipeline.py
