[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "new_kedro_project"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
new-kedro-project = "new_kedro_project.__main__:main"

[tool.kedro]
package_name = "new_kedro_project"
project_name = "New Kedro Project"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "new_kedro_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
